tests/Houtamelo.Spire.Analyzers.Tests/SPIRE003/cases/Detect_RecordStruct_DefaultLiteral.cs
//@ should_fail
// Ensure that SPIRE003 IS triggered when EnforceInitializationRecordStruct s = default; is used.
public class Detect_RecordStruct_DefaultLiteral
{
    public void Method()
    {
        EnforceInitializationRecordStruct s = default; //~ ERROR
    }
}
